--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name":"code-cn/help-thinkPHP3.2.3",
+    "name":"code-cn/help-thinkphp3.2.3",
     "license": "MIT",
     "authors": [
         {
