--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name":"code-cn/help-thinkphp3.2.3",
+    "description": "用于 thinkPHP 3.2.3 的辅助函数",
     "license": "MIT",
     "authors": [
         {
